# QuackView

./: .gitignore  LICENSE  README.md  pyproject.toml
app/analyzer/: __init__.py  excel_analyzer.py
app/api/: config.py  exceptions.py  main.py  middleware.py  models.py  routes.py  service.py
app/cli/: __init__.py  main.py
app/connector/: excel_connector.py
app/executor/: __init__.py  sql_executor.py
app/generator/: __init__.py  sql_generator.py
app/query/: __init__.py  engine.py  query_service.py
app/utils/: utils.py
docs/: sql-template.md
examples/: example_usage.py
frontend/: README.md  api.d.ts  fresh.config.ts  fresh.gen.ts
frontend/components/: Alert.tsx  Button.tsx  Card.tsx  Footer.tsx  Header.tsx  Layout.tsx  Table.tsx
frontend/islands/: AnalysisContainer.tsx  AnalysisForm.tsx  AnalysisResult.tsx  CustomQuery.tsx  FileUpload.tsx
frontend/routes/: _404.tsx  _app.tsx  about.tsx  analyze.tsx  index.tsx
frontend/routes/api/: [...path].ts
frontend/static/: styles.css
frontend/types/: analysis.ts
frontend/utils/: api-client.ts  logger.ts
hurl/: 01_connection.hurl  02_schema.hurl  03_analysis.hurl  04_export.hurl  05_custom_query.hurl  06_error_handling.hurl  07_success_scenarios.hurl  08_sql_generation_tests.hurl  README.md  data.xlsx
tests/: README.md  run_tests.py  test_edge_cases.py  test_integration.py  test_sql_executor.py  test_sql_generation_integration.py  test_sql_generator.py  test_utils.py
