[project]
name = "quackview"
version = "1.0.0"
description = "Click & Analyze."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "duckdb>=1.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "rich>=14.0.0",
]

[project.scripts]
qv = "app.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
