[project]
name = "quackview"
version = "1.0.0"
description = "Click & Analyze."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
qv = "app.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
